05 - currency-conversion-service/ingress/ingress_aws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: gateway-ingress
   annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
spec:
   rules:
   -  http:
         paths:
         -  path: /currency-exchange/*
            backend:
               serviceName: currency-exchange
               servicePort: 8000
         -  path: /currency-conversion/*
            backend:
               serviceName: currency-conversion
               servicePort: 8100
