05 - currency-conversion-service/ingress/ingress_azure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: gateway-ingress
   annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: true
spec:
   rules:
   -  http:
         paths:
         -  path: /currency-exchange(/|$)(.*)
            backend:
               serviceName: currency-exchange
               servicePort: 8000
         -  path: /currency-conversion(/|$)(.*)
            backend:
               serviceName: currency-conversion
               servicePort: 8100
